--- a/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
@@ -270,8 +270,10 @@
     <Content Include="Views\Layout\_HomeLayout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\SanPham\SanPhamPartial.cshtml" />
-    <Content Include="Views\SanPham\SanPham.cshtml" />
     <Content Include="Views\Home\MenuPartial.cshtml" />
+    <Content Include="Views\Layout\_ProductLayout.cshtml" />
+    <Content Include="Views\SanPham\ChiTietSanPham.cshtml" />
+    <Content Include="Views\SanPham\SanPham.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
