Chỉnh sửa lại đăng ký
thêm table nhaplaimatkhau
so sánh 2 mật khẩu
đẫ thêm thành viên thành công

--- a/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Models\LoaiThanhVien.cs">
       <DependentUpon>Quanlibanhang.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Metadata\ThanhVien.metadata.cs" />
     <Compile Include="Models\NhaCungCap.cs">
       <DependentUpon>Quanlibanhang.tt</DependentUpon>
     </Compile>
