--- a/NguyenHoangLaptop/NguyenHoangLaptop/Web.config
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Web.config
@@ -57,8 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QuanlibanhanglaptopEntities" connectionString="metadata=res://*/Models.Quanlibanhang.csdl|res://*/Models.Quanlibanhang.ssdl|res://*/Models.Quanlibanhang.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-APBCGPH\SQLEXPRESS;initial catalog=Quanlibanhanglaptop;persist security info=True;user id=sa;password=1605;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="QuanlibanhanglaptopEntities1" connectionString="metadata=res://*/Models.Quanlibanhang.csdl|res://*/Models.Quanlibanhang.ssdl|res://*/Models.Quanlibanhang.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-APBCGPH\SQLEXPRESS;initial catalog=Quanlibanhanglaptop;persist security info=True;user id=sa;password=1605;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QuanlibanhanglaptopEntities" connectionString="metadata=res://*/Models.QuanLiBanHangLapTop.csdl|res://*/Models.QuanLiBanHangLapTop.ssdl|res://*/Models.QuanLiBanHangLapTop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-APBCGPH\SQLEXPRESS;initial catalog=Quanlibanhanglaptop;user id=sa;password=1605;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
