--- a/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
@@ -345,6 +345,7 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\QuanLiSanPham\Index.cshtml" />
     <Content Include="Views\QuanLiSanPham\TaoMoi.cshtml" />
+    <Content Include="Views\QuanLiSanPham\ChinhSua.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
