--- a/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
@@ -140,9 +140,11 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PhanQuyenController.cs" />
     <Compile Include="Controllers\QuanLiDonHangController.cs" />
     <Compile Include="Controllers\QuanLiPhieuNhapController.cs" />
     <Compile Include="Controllers\QuanLiSanPhamController.cs" />
+    <Compile Include="Controllers\QuyenController.cs" />
     <Compile Include="Controllers\SanPhamController.cs" />
     <Compile Include="Controllers\SubmidListModelController.cs" />
     <Compile Include="Controllers\ThongKeController.cs" />
@@ -196,6 +198,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QuanLiBanHangLapTop.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Quyen.cs">
+      <DependentUpon>QuanLiBanHangLapTop.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Quyen_LoaiTV.cs">
+      <DependentUpon>QuanLiBanHangLapTop.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>QuanLiBanHangLapTop.tt</DependentUpon>
@@ -322,7 +330,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -359,6 +369,11 @@
     <Content Include="Views\QuanLiDonHang\DaGiaoDaThanhToan.cshtml" />
     <Content Include="Views\QuanLiDonHang\DuyetDonHang.cshtml" />
     <Content Include="Views\ThongKe\Index.cshtml" />
+    <Content Include="Views\Home\NganTruyCap.cshtml" />
+    <Content Include="Views\Quyen\Index.cshtml" />
+    <Content Include="Views\Quyen\ThemQuyen.cshtml" />
+    <Content Include="Views\PhanQuyen\Index.cshtml" />
+    <Content Include="Views\PhanQuyen\PhanQuyen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
