--- a/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/NguyenHoangLaptop.csproj
@@ -163,6 +163,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Anh.cs">
+      <DependentUpon>QuanLiBanHangLapTop.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BinhLuan.cs">
       <DependentUpon>QuanLiBanHangLapTop.tt</DependentUpon>
     </Compile>
