--- a/NguyenHoangLaptop/NguyenHoangLaptop/bin/NguyenHoangLaptop.dll.config
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/bin/NguyenHoangLaptop.dll.config
@@ -58,9 +58,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="QuanlibanhanglaptopEntities" connectionString="metadata=res://*/Models.QuanLiBanHangLapTop.csdl|res://*/Models.QuanLiBanHangLapTop.ssdl|res://*/Models.QuanLiBanHangLapTop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-APBCGPH\SQLEXPRESS;initial catalog=Quanlibanhanglaptop;user id=sa;password=1605;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="QuanlibanhanglaptopEntities" connectionString="metadata=res://*/Models.QuanLiBanHangLapTop.csdl|res://*/Models.QuanLiBanHangLapTop.ssdl|res://*/Models.QuanLiBanHangLapTop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=THAIND\SQLEXPRESS;initial catalog=NguyenHoangLapTop;persist security info=True;user id=sa;password=1605;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
